force-app/main/default/objects/Truck_Trip__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <label>Driver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2nd Outside Carrier</fullName>
                <color>#0B6FCE</color>
                <label>2nd Outside Carrier</label>
            </value>
            <value>
                <fullName>Luc Brouillette</fullName>
                <color>#78C953</color>
                <label>Luc Brouillette</label>
            </value>
            <value>
                <fullName>Mike Rancourt</fullName>
                <color>#E27001</color>
                <label>Mike Rancourt</label>
            </value>
            <value>
                <fullName>Bill Gaudreau</fullName>
                <color>#A845DC</color>
                <label>Bill Gaudreau</label>
            </value>
            <value>
                <fullName>Dealer_Pickup</fullName>
                <color>#F3D904</color>
                <label>Dealer Pickup</label>
            </value>
            <value>
                <fullName>Outside Carrier</fullName>
                <color>#A53711</color>
                <label>Outside Carrier</label>
            </value>
            <value>
                <fullName>Campion</fullName>
                <color>#66E9BD</color>
                <label>Campion</label>
            </value>
            <value>
                <fullName>3rd Outside Carrier</fullName>
                <color>#0B24BE</color>
                <label>3rd Outside Carrier</label>
            </value>
            <value>
                <fullName>2nd Dealer Pickup</fullName>
                <color>#419249</color>
                <label>2nd Dealer Pickup</label>
            </value>
            <value>
                <fullName>Mike_Lavallee</fullName>
                <color>#B6E32E</color>
                <label>Mike Lavallee</label>
            </value>
            <value>
                <fullName>Marianne</fullName>
                <color>#641CCF</color>
                <label>Marianne</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>