force-app/main/default/objects/Truck_Trip__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <label>Truck</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Truck 2 Older Sterling</fullName>
            </value>
            <value>
                <fullName>Truck 4 2008 Freightliner</fullName>
            </value>
            <value>
                <fullName>Truck 5 2009 Freightliner</fullName>
            </value>
            <value>
                <fullName>Truck 6 Argosy Freightliner</fullName>
            </value>
            <value>
                <fullName>Truck 7 Argosy Freightliner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>