force-app/main/default/objects/Truck_Trip__c/fields/Truck_Driver__c.field-meta.xml
<CustomField>
    <fullName>Truck_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Truck Driver</label>
    <referenceTo>Truck_Driver__c</referenceTo>
    <relationshipLabel>Truck Trips</relationshipLabel>
    <relationshipName>Truck_Trips</relationshipName>
    <type>Lookup</type>
</CustomField>