force-app/main/default/objects/Truck_Trip__c/validationRules/Departure_date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_date_required</fullName>
    <active>true</active>
    <description>Departure date is required if Return date is specified</description>
    <errorConditionFormula>AND(
  ISNULL( Departure_Date__c ),
  NOT( ISNULL( Return_Date__c ) )
)</errorConditionFormula>
    <errorMessage>Departure date is required if Return date is specified</errorMessage>
</ValidationRule>